--- a/scripts/build
+++ b/scripts/build
@@ -6,7 +6,7 @@ build_dir=$1
 
 download_from_scm() {
     wget -r -nH --preserve-permissions --level=0 --cut-dirs=10 --directory-prefix="${build_dir}" ftp://cp01-rdqa-pool480.cp01.baidu.com/home/users/yanming02/RunEnv/Redis3.0/osp/zk/zookeeper-3.4.6.tar.gz
-    tar xvf ${build_dir}/zookeeper-3.4.6.tar.gz -C ${build_dir}
+    tar zxvf ${build_dir}/zookeeper-3.4.6.tar.gz -C ${build_dir}
 }
 
 if [[ -d $build_dir ]]; then
